--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@ nohy<!DOCTYPE html>
             <p>🇬🇧</p>
 
 
-            <p>perfil contacto</p>
+            <p>vortex contacto</p>
 
 
             <p>🇮🇷 </p>
@@ -362,7 +362,7 @@ nohy<!DOCTYPE html>
 
         .album-item {
 
-            margin: 10px;
+            margin: 40px;
 
             text-align: center;
 
@@ -370,9 +370,9 @@ nohy<!DOCTYPE html>
 
         .album-item img {
 
-            max-width: 85px;
+            max-width: 100px;
 
-            max-height: 85px;
+            max-height: 100px;
 
             display: block;
 
