--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ nohy<!DOCTYPE html>
             <p>🤍</p>
 
 
-            <p>perfil contacto</p>
+            <p>vortex contacto</p>
             
 
             <p>💲</p>
@@ -204,7 +204,7 @@ nohy<!DOCTYPE html>
             <p>🇯🇵</p>
 
 
-            <p>perfil contacto</p>
+            <p>vortex contacto</p>
 
 
             <p>🏴󠁧󠁢󠁥󠁮󠁧󠁿</p>
@@ -342,7 +342,7 @@ nohy<!DOCTYPE html>
 
             font-family: Arial, sans-serif;
 
-            margin: 20px;
+            margin: 60px;
 
         }
 
