--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ nohy<!DOCTYPE html>
 
             height: 300vh;
 
-            background-color: #FFB6C1;
+            background-color: #D9A300;
 
         }
 
@@ -94,7 +94,7 @@ nohy<!DOCTYPE html>
 
             font-size: 4rem;
 
-            color: #FFB6C1;
+            color: #D9A300;
 
             cursor: pointer;
 
