--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ nohy<!DOCTYPE html>
 
             font-size: 4rem;
 
-            color: #FFB6C1;
+            color: #ffffff00;
 
             cursor: pointer;
 
