--- a/acerca.html
+++ b/acerca.html
@@ -23,9 +23,7 @@
         <section>
             <h1></h1>
             <!-- Información sobre la empresa -->
-            <p>VIVA EL AMOR WELCOM Hi MUNDO VORTEX iS GENIAL 😉✔👽</p>
-            <p>memorandum cuida tu vista camina en reversa regenera tu vision#1</p>
-            <p>memorandum cuida tu audicion escucha solo 1 hora la musica</p>
+        
         </section>
     </main>
     <footer>
@@ -33,3 +31,53 @@
     </footer>
 </body>
 </html>
+
+
+<div class="container">
+        <div class="telephone __one">
+            <div class="chat-background">
+                <article class="chat-article">
+                    <header class="article-header">
+                        <img src="https://cdn2.iconfinder.com/data/icons/business-management-52/96/Artboard_20-512.png" alt="Foto de perfil" class="user-image">
+                        <h1 class="user-username">User 1</h1>
+                    </header>
+                    <div class="chat" id="chat1">
+
+                    </div>
+                    <div class="modal">
+
+                    </div>
+                    <form id="msjs1" class="form-chat">
+                        <input class="input-text" type="text" placeholder="Escribe tu mensaje ...">
+                        <button type="button" class="icon icon-submit"></button>
+                      <label class="icon icon-camera">
+                        <input type="file" class="inputFile">
+                      </label>
+                    </form>
+                </article>
+            </div>
+        </div>
+        <div class="telephone __two">
+            <div class="chat-background">
+                <article class="chat-article">
+                    <header class="article-header">
+                        <img src="https://cdn2.iconfinder.com/data/icons/business-management-52/96/Artboard_20-512.png" alt="Foto de perfil" class="user-image">
+                        <h1 class="user-username">User 2</h1>
+                    </header>
+                    <div class="chat" id="chat2">
+
+                    </div>
+                    <div class="modal">
+
+                    </div>
+                    <form id="msjs2" class="form-chat">
+                        <input class="input-text" type="text" placeholder="Escribe tu mensaje ...">
+                        <button type="button" class="icon icon-submit"></button>
+                      <label class="icon icon-camera">
+                        <input type="file" class="inputFile">
+                      </label>
+                    </form>
+                </article>
+            </div>
+        </div>
+    </div>
