--- a/vortex.html
+++ b/vortex.html
@@ -9,7 +9,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="indexx.html">Display Online</a></li>
+                <li><a href="indexx.html">Display Online🎄</a></li>
                 <li><a href="vortex.html">Vortex👽</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
                 <li><a href="games.html">Games 2025🏆</a></li>
