--- a/acerca.html
+++ b/acerca.html
@@ -1,35 +1,65 @@
 <!DOCTYPE html>
+
 <html lang="es">
+
 <head>
+
     <meta charset="UTF-8">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Display Podcast</title>
+
+    <title>Detector de Objetos</title>
+
     <link rel="stylesheet" href="styles.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
+
 </head>
+
 <body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="indexx.html">Display Online</a></li>
-                <li><a href="vortex.html">Vortex👽</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-                <li><a href="games.html">Games 2025🏆</a></li>
-                <li><a href="acerca.html">Vpodcast👽</a></li>
-                
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section>
-            <h1></h1>
-            <!-- Información sobre la empresa -->
-            <p>VIVA EL AMOR WELCOM Hi MUNDO VORTEX iS GENIAL 😉✔👽</p>
-            <p>memorandum cuida tu vista camina en reversa regenera tu vision#1</p>
-            <p>memorandum cuida tu audicion escucha solo 1 hora la musica</p>
-        </section>
-    </main>
-    <footer>
-        <!-- Pie de página con información adicional -->
-    </footer>
+
+    <h1>Detector de Objetos</h1>
+
+    <video id="video" width="640" height="480" autoplay></video>
+
+    <canvas id="canvas" width="640" height="480"></canvas>
+
+    <script src="scripts.js"></script>
+
 </body>
+
+</html><!DOCTYPE html>
+
+<html lang="es">
+
+<head>
+
+    <meta charset="UTF-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title>Detector de Objetos</title>
+
+    <link rel="stylesheet" href="styles.css">
+
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/coco-ssd"></script>
+
+</head>
+
+<body>
+
+    <h1>Detector de Objetos</h1>
+
+    <video id="video" width="640" height="480" autoplay></video>
+
+    <canvas id="canvas" width="640" height="480"></canvas>
+
+    <script src="scripts.js"></script>
+
+</body>
+
 </html>
