--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ nohy<!DOCTYPE html>
                 
                 <li><a href="acerca.html">Vpodcast👽</a></li>
                 
-                <li><a href="vortex.html">Vortex👽</a></li>
+                <li><a href="detecta.html">Vortex👽</a></li>
             </ul>
         </nav>
     </header>
